# openenv-email-triage

./: Dockerfile  README.md  env.py  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
