[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage"
version = "1.0.0"
description = "A real-world OpenEnv simulation environment for evaluating AI agents on an email triage task."
authors = [
    { name = "Developer" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
